<resources>

    <string name="app_name">MoodCloud</string>
    <string name="title_activity_search_moods">SearchMoods</string>

    <string-array name="whereArray">
        <item>Everyone</item>
        <item>Following</item>
        <item>My Moods</item>
    </string-array>

    <string-array name="moodsArray">
        <item>Any</item>
        <item>Angry</item>
        <item>Confused</item>
        <item>Disgusted</item>
        <item>Scared</item>
        <item>Happy</item>
        <item>Sad</item>
        <item>Ashamed</item>
        <item>Surprised</item>
    </string-array>

    <string-array name="groupSoloArray">
        <item>Any</item>
        <item>Alone</item>
        <item>With A Group</item>
        <item>With A Crowd</item>
    </string-array>

    <string name="addMoodShortcutShort">Mood event</string>
    <string name="addMoodShortcutLong">Add mood event</string>
    <string name="addMoodShortcutDisabled">Mood event shortcut disabled</string>
    <string name="moodHistoryShortcutShort">Mood history</string>
    <string name="moodHistoryShortcutLong">My mood history</string>
    <string name="moodHistoryShortcutDisabled">Mood history shortcut disabled</string>

</resources>
